Fixed margins on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -304,8 +304,8 @@ button.btn, input.btn {
     margin-left: 6em;
     margin-right: 6em;
     @include bp-xsmall {
-      margin-left: 1em;
-      margin-right: 1em;
+      margin-left: 0em;
+      margin-right: 0em;
     }
     .post-title {
       display: flex;
@@ -339,7 +339,13 @@ button.btn, input.btn {
       gap: 2em;
 	  a {
 	    font-size: 18px;
-	  }      
+        @include bp-small {
+          font-size: 16px;
+        }
+        @include bp-xsmall {
+          font-size: 16px;
+        }
+      }
     }
     .tags, .categories {
       margin: 2em 0;
